# intentio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  todo.md  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1666608156283.mjs
.github/workflows/: bundle.yml
main-legacy/: ConfigView.tsx
public/: about.json
public/data/: about.json
src/: App.tsx  config.ts  events.tsx  ipc.ts  main.tsx  motions.ts  store.ts  style.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: themes.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-06-13-090510_create_intent_table/: down.sql  up.sql
src-tauri/migrations/2023-06-13-193613_create_session_table/: up.sql
src-tauri/migrations/2023-06-14-084424_create_tasks_table/: up.sql
src-tauri/migrations/2023-06-14-121849_create_scripts_table/: up.sql
src-tauri/migrations/2023-06-14-135059_create_themes_table/: down.sql  up.sql
src-tauri/migrations/2023-06-26-081734_update_themes_table/: down.sql  up.sql
src-tauri/migrations/2023-06-26-085227_create_tags_table/: down.sql  up.sql
src-tauri/src/: commands.rs  ctx.rs  error.rs  event.rs  lib.rs  main.rs  prelude.rs  schema.rs  setup.rs  startup.rs  state.rs  timer.rs
src-tauri/src/bmc/: intent.rs  intent_tag.rs  mod.rs  script.rs  session.rs  tag.rs  task.rs  theme.rs
src-tauri/src/cfg/: audio.rs  behavior.rs  interface.rs  mod.rs  timer.rs
src-tauri/src/config/: mod.rs  queue.rs  settings.rs  timer.rs
src-tauri/src/database/: mod.rs  try_froms.rs  x_takes.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/bmc/: intent.rs  mod.rs  script.rs  session.rs  task.rs  theme.rs
src-tauri/src/db/models/: intent.rs  mod.rs  script.rs  session.rs  task.rs  theme.rs
src-tauri/src/ipc/: cfg.rs  config.rs  helpers.rs  intent.rs  mod.rs  note.rs  params.rs  project.rs  queue.rs  queue_session.rs  response.rs  script.rs  session.rs  settings.rs  state.rs  tag.rs  task.rs  theme.rs  timer.rs  todo.rs  utils.rs
src-tauri/src/model/: bmc_base.rs  intent.rs  mod.rs  note.rs  project.rs  queue.rs  queue_session.rs  script.rs  session.rs  settings.rs  task.rs  theme.rs  todo.rs
src-tauri/src/models/: intent.rs  mod.rs  note.rs  script.rs  session.rs  settings.rs  tag.rs  task.rs  theme.rs
src-tauri/src/store/: mod.rs  try_froms.rs  x_takes.rs
src-tauri/src/timer/: error.rs  mod.rs  queue.rs  session.rs
src-tauri/src/utils/: mod.rs  testing.rs  x_take.rs
src/app/: config.ts  index.ts  ipc.ts  store.ts
src/bindings/: ActiveQueue.ts  AudioConfig.ts  AudioConfigForUpdate.ts  BehaviorConfig.ts  BehaviorConfigForUpdate.ts  CreateIntent.ts  CreateIntentTag.ts  CreateScript.ts  CreateSession.ts  CreateTag.ts  CreateTask.ts  CreateTheme.ts  CreateTimerSession.ts  DeleteIntentTag.ts  EventPayload.ts  GetSessionsOptions.ts  GetTasksOptions.ts  Intent.ts  IntentForCreate.ts  IntentForUpdate.ts  Note.ts  (+50 more)
(+348 files in other folders)
