[package]
name = "pomodoro"
version = "0.0.0"
description = "A pomodoro desktop app."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with_macros = "2"
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
chrono = { version = "0.4.22", features = ["serde"] }
cuid = "1.2.0"
rodio = "0.16.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem', 'kv-rocksdb'] }
ts-rs = { version = "6", features = ["format", "chrono-impl"] }
toml = "0.5.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
