[package]
name = "intentio"
version = "2.0.0"
description = "A pomodoro timer desktop app."
authors = ["Jacob <jacobgluszek03@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JakubGluszek/intentio"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with_macros = "2"
tauri = { version = "1.2.3", features = ["api-all", "system-tray"] }
window-shadows = "0.2.0"
chrono = { version = "0.4.22", features = ["serde"] }
cuid = "1.2.0"
rodio = "0.16.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem', 'kv-rocksdb'] }
ts-rs = { version = "6", features = ["format", "chrono-impl"] }
toml = "0.5.9"
tauri-hotkey = "0.1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
